# shooting-star

./: Cargo.toml  LICENSE  Readme.md
src/: main.rs
