[package]
name = "shooting-star"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.37"
clap = { version = "4.5.3", features = ["derive"] }
mime_guess = "2.0.4"
native-tls = "0.2.11"
tokio = { version = "1.36.0", features = ['full'] }
tokio-native-tls = "0.3.1"
url = "2.5.0"
